library exercise 1